# dithercpp

./: .gitignore  CMakeLists.txt  README.md  boxblur.cpp  dither.cpp  gaussian.cpp  image.cpp  image.hpp  vcpkg.json
